--- a/Gallery.html
+++ b/Gallery.html
@@ -21,7 +21,7 @@
         <!-- mid box for navbar -->
         <div class="mid">
             <ul class="navbar">
-                <li><a href="/Home.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/AboutUs.html">About</a></li>
                 <li><a href="/Gallery.html" class="active">Gallery</a></li>
                 <li><a href="/contact.html">Contact</a></li>
