--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,10 +21,10 @@
         <!-- mid box for navbar -->
         <div class="mid">
             <ul class="navbar">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/AboutUs.html" class="active">About</a></li>
-                <li><a href="/Gallery.html">Gallery</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="AboutUs.html" class="active">About</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
